--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -5,7 +5,12 @@ toc_min_heading_level: 2
 toc_max_heading_level: 4
 ---
 
-<h1 align="center"><img src="https://raw.githubusercontent.com/mkosir/typescript-style-guide/main/misc/typescript-logo-30.png" /> TypeScript Style Guide</h1>
+import TOCInline from "@theme/TOCInline";
+
+<h1 align="center">
+  <img src="https://raw.githubusercontent.com/mkosir/typescript-style-guide/main/misc/typescript-logo-30.png" />{" "}
+  TypeScript Style Guide
+</h1>
 
 ## Introduction
 
@@ -13,58 +18,7 @@ TypeScript Style Guide provides a concise set of conventions (sometimes arbitrar
 
 ## Table of Contents
 
-- [Introduction](#introduction)
-- [Table of Contents](#table-of-contents)
-- [About Guide](#about-guide)
-- [TLDR](#tldr)
-- [Data Immutability](#data-immutability)
-- [Functions](#functions)
-- [Variables](#variables)
-  - [Const Assertion](#const-assertion)
-  - [Enums](#enums)
-  - [Null & Undefined](#null--undefined)
-- [Types](#types)
-  - [Type Definition](#type-definition)
-  - [Array Types](#array-types)
-  - [Type Annotation & Inference](#type-annotation--inference)
-  - [Return Types](#return-types)
-  - [Type Error](#type-error)
-  - [Type & Non-nullability Assertions](#type--non-nullability-assertions)
-  - [any](#any)
-- [Naming](#naming)
-  - [Named Export](#named-export)
-  - [Naming Conventions](#naming-conventions)
-    - [Variables](#variables-1)
-      - [Locals](#locals)
-      - [Booleans](#booleans)
-      - [Constants](#constants)
-      - [Object constants](#object-constants)
-    - [Functions](#functions-1)
-    - [Generics](#generics)
-    - [React Components](#react-components)
-    - [Prop Types](#prop-types)
-    - [Callback Props](#callback-props)
-    - [React Hooks](#react-hooks)
-  - [Comments](#comments)
-- [React Components](#react-components-1)
-  - [Props](#props)
-    - [Using Props Type](#using-props-type)
-    - [Required \& Optional Props](#required--optional-props)
-    - [Using Discriminated Type](#using-discriminated-type)
-  - [Component Types](#component-types)
-    - [Container](#container)
-    - [UI - Feature](#ui---feature)
-    - [UI - Design system](#ui---design-system)
-  - [Passing Data](#passing-data)
-- [Source Organization](#source-organization)
-  - [Code Collocation](#code-collocation)
-  - [Imports](#imports)
-  - [Project Structure](#project-structure)
-- [Tests - Unit \& Integration](#tests---unit--integration)
-  - [What \& How To Test](#what--how-to-test)
-  - [Test Description](#test-description)
-  - [Tooling Extension](#tooling-extension)
-  - [Snapshot](#snapshot)
+<TOCInline toc={toc} minHeadingLevel={2} maxHeadingLevel={4} />
 
 ## About Guide
 
