--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -521,7 +521,7 @@ export const Status = (status: StatusProps) => {...
 
 ### Component Types
 
-#### Container:
+#### Container
 
 - All container components have postfix "Container" or "Page" `[ComponentName]Container|Page`. Use "Page" postfix to indicate component it's an actual web page.
 - Each feature has a container component (`AddUserContainer.tsx`, `EditProductContainer.tsx`, `ProductsPage.tsx` etc.)
