--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -427,7 +427,7 @@ While it's often hard to find the best names, try optimize code for consistency 
 
 ### Comments
 
-Comments in general should be avoided. Try to write clear code and name things what they are before adding comments.
+Comments in general should be avoided. Try to write expressive code and name things what they are before adding comments.
 
 As an exception use comments only when you need to add context or explain choices that cannot be expressed through code.  
 Comments should always be complete sentences. As rule of a thumb try to explain `why` in comments, not `how` and `what`.
