--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -574,14 +574,17 @@ export const Status = (status: StatusProps) => {...
   └─ Button.test.tsx
   ```
 
-### Passing Data
+### Store & Pass Data
 
+- Utilize storing state in the URL, especially for filtering, sorting etc.
+- Don't sync URL state with local state.
 - Prop drilling should not become an issue, if it does [break out your render method](https://kentcdodds.com/blog/prop-drilling#how-can-we-avoid-problems-with-prop-drilling).
-- Component composition is discouraged. Exceptions can be made, with strong rational behind it, where its being emphasized how component API improved (performance improvement, better app scalability etc.)
-- Fetching of data is only allowed in container components.
+- Consider passing data simply through props, using the URL, or composing children. Use global state (Zustand, Context) as a last resort.
+- Use component composition sparingly, where its emphasized how component API improved (performance improvement, better app scalability etc.)
+- Data fetching is only allowed in container components. UI components should show derived state and send events, nothing more.
 - Use of server-state library is encouraged ([react-query](https://github.com/tanstack/query), [apollo client](https://github.com/apollographql/apollo-client)...).
 - use of client-state library for global state is discouraged.  
-  Reconsider if something should be truly global across application, e.g. `themeMode`, `Permissions` or even that can be put in server-state (e.g. user settings - `/me` endpoint). If still truly needed use [Zustand](https://github.com/pmndrs/zustand) (not Redux, Mobx etc.).
+  Reconsider if something should be truly global across application, e.g. `themeMode`, `Permissions` or even that can be put in server-state (e.g. user settings - `/me` endpoint). If still truly needed use [Zustand](https://github.com/pmndrs/zustand) or Context (not Redux, Mobx etc.).
 
 ## Source Organization
 
