--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -41,10 +41,9 @@ Style Guide requires you to use:
 - Strive to have majority of function arguments required (use optional sparingly). [&#11107;](#required--optional-props)
 - Embrace const assertions. [&#11107;](#const-assertion)
 - Strong emphasis to keep naming conventions consistent and readable. [&#11107;](#naming-conventions)
-- Use of server-state library is encouraged ([react-query](https://github.com/tanstack/query), [apollo client](https://github.com/apollographql/apollo-client)...). [&#11107;](#passing-data)
-- Use of client-state library for global state is discouraged. [&#11107;](#passing-data)
 - Use named exports. [&#11107;](#named-export)
-- Prop drilling should not become an issue. [&#11107;](#passing-data)
+- Use of server-state library is encouraged ([react-query](https://github.com/tanstack/query), [apollo client](https://github.com/apollographql/apollo-client)...). [&#11107;](#store--pass-data)
+- Use of client-state library for global state is discouraged. [&#11107;](#store--pass-data)
 - UI components must only show derived state and send events, nothing more (no business logic). [&#11107;](#component-types)
 - Test business logic, not implementation details. [&#11107;](#what--how-to-test)
 
@@ -580,8 +579,9 @@ export const Status = (status: StatusProps) => {...
 - Don't sync URL state with local state.
 - Prop drilling should not become an issue, if it does [break out your render method](https://kentcdodds.com/blog/prop-drilling#how-can-we-avoid-problems-with-prop-drilling).
 - Consider passing data simply through props, using the URL, or composing children. Use global state (Zustand, Context) as a last resort.
-- Use component composition sparingly, where its emphasized how component API improved (performance improvement, better app scalability etc.)
-- Data fetching is only allowed in container components. UI components should show derived state and send events, nothing more.
+- Use component composition sparingly, where its emphasized how component API improved (performance improvement, better app scalability etc.).
+- UI components should show derived state and send events, nothing more.
+- Data fetching is only allowed in container components.
 - Use of server-state library is encouraged ([react-query](https://github.com/tanstack/query), [apollo client](https://github.com/apollographql/apollo-client)...).
 - use of client-state library for global state is discouraged.  
   Reconsider if something should be truly global across application, e.g. `themeMode`, `Permissions` or even that can be put in server-state (e.g. user settings - `/me` endpoint). If still truly needed use [Zustand](https://github.com/pmndrs/zustand) or Context (not Redux, Mobx etc.).
