--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -459,9 +459,7 @@ const frequencies = signal.FFT();
 
 ## React Components
 
-### Props
-
-#### Using Props Type
+### Props Type
 
 ```tsx
 // ❌ Avoid using React.FC type
@@ -481,7 +479,7 @@ type FooProps = Readonly<{
 export const Foo = ({ name, score }: FooProps) => {...
 ```
 
-#### Required & Optional Props
+### Required & Optional Props
 
 **Strive to have majority of props required and use optional sparingly**.
 
