--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -481,7 +481,7 @@ export const Foo = ({ name, score }: FooProps) => {...
 
 ### Required & Optional Props
 
-**Strive to have majority of props required and use optional sparingly**.
+**Strive to have majority of props required and use optional sparingly.**
 
 Especially when creating new component for first/single use case majority of props should be required. When component starts covering more use cases, introduce optional props.  
 There are potential exceptions, where component API needs to implement optional props from the start (e.g. shared components covering multiple use cases, UI design system components - button `isDisabled` etc.)
@@ -490,9 +490,9 @@ As mentioned in function example - implementing 10 React components with 5 requi
 If component becomes to complex it probably should be broken into smaller pieces.  
 React components are functions, where [respective conventions apply](#functions).
 
-#### Using Discriminated Type
+**Use Discriminated Type**
 
-When applicable use **discriminated type** to eliminate optional props, which will decrease complexity on component API and only necessary/required props will be passed.
+When applicable use **discriminated type** to eliminate optional props, which will decrease complexity on component API and only necessary/required props will be passed depending on its use case.
 
 ```ts
 // ❌ Avoid optional props as they increase complexity of component API
