--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -24,7 +24,7 @@ TypeScript Style Guide provides a concise set of conventions (sometimes arbitrar
 
 As any code style guide is opinionated, this is no different as it tries to set conventions that govern our code.
 
-Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc. Still certain opinionated design and architectural decisions must be followed which are covered with described conventions bellow.
+Since "consistency is the key", style guide strives to enforce majority of the rules by using automated tooling as ESLint, TypeScript, Prettier, etc. Still certain design and architectural decisions must be followed which are described with conventions bellow.
 
 Style Guide requires you to use:
 
