--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -31,7 +31,11 @@ Style Guide requires you to use:
 - [TypeScript v5](https://github.com/microsoft/TypeScript)
 - [typescript-eslint v6](https://github.com/typescript-eslint/typescript-eslint) with [`strict-type-checked`](https://typescript-eslint.io/linting/configs/#strict-type-checked),
   [`stylistic-type-checked`](https://typescript-eslint.io/linting/configs/#stylistic-type-checked) configurations enabled.
-- For frontend specific conventions it assumes you are using, but is not limited to [React](https://github.com/facebook/react) UI library.
+
+Style Guide assumes using, but is not limited to:
+
+- [React](https://github.com/facebook/react) as UI library for frontend conventions.
+- [Jest](https://jestjs.io/) and [Testing Library](https://testing-library.com/) for testing conventions.
 
 ## TLDR
 
