--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -42,7 +42,7 @@ Style Guide assumes using, but is not limited to:
 - **Code is organized and grouped by feature.** Collocate code as close as possible to where it's relevant. [&#11107;](#code-collocation)
 - Strive for data immutability. [&#11107;](#data-immutability)
 - Strive for functions to be pure, stateless and have single responsibility. [&#11107;](#functions)
-- Strive to have majority of function arguments required (use optional sparingly). [&#11107;](#required--optional-props)
+- Majority of function arguments should be required (use optional sparingly). [&#11107;](#required--optional-props)
 - Embrace const assertions. [&#11107;](#const-assertion)
 - Strong emphasis to keep naming conventions consistent and readable. [&#11107;](#naming-conventions)
 - Use named exports. [&#11107;](#named-export)
