--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -457,6 +457,8 @@ const frequencies = signal.FFT();
 
 ## React Components
 
+### Functions
+
 Since React components and hooks are also functions, [respective function conventions](#functions) applies.
 
 <details>
