--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -6,11 +6,17 @@ toc_max_heading_level: 3
 ---
 
 import TOCInline from "@theme/TOCInline";
+import Tilt from "react-parallax-tilt";
+import { TitleComponent } from "@site/src/components";
 
 <h1 align="center">
-  <img src="https://raw.githubusercontent.com/mkosir/typescript-style-guide/main/misc/typescript-logo-30.png" />{" "}
-  TypeScript Style Guide
+  <Tilt>
+    <img src="https://raw.githubusercontent.com/mkosir/typescript-style-guide/main/misc/typescript-logo-30.png" />{" "}
+    TypeScript Style Guide
+  </Tilt>
 </h1>
+
+<TitleComponent color="#11c2a0">TitleComponent</TitleComponent>
 
 ## Introduction
 
