--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -16,7 +16,7 @@ import { TitleComponent } from "@site/src/components";
   </Tilt>
 </h1>
 
-<TitleComponent color="#11c2a0">TitleComponent</TitleComponent>
+<!-- <TitleComponent color="#11c2a0">TitleComponent</TitleComponent> -->
 
 ## Introduction
 
