--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1,5 +1,5 @@
 ---
-# title: TypeScript Style Guide
+# title: TypeScript SSS Style Guide
 description: TypeScript Style Guide provides a concise set of conventions (sometimes arbitrary) and best practices used to create consistent, maintainable code.
 toc_min_heading_level: 2
 toc_max_heading_level: 3
@@ -10,7 +10,7 @@ import Tilt from "react-parallax-tilt";
 import { TitleComponent } from "@site/src/components";
 
 <h1 align="center">
-  <Tilt>
+  <Tilt scale={1.02} transitionSpeed={2500}>
     <img src="https://raw.githubusercontent.com/mkosir/typescript-style-guide/main/misc/typescript-logo-30.png" />{" "}
     TypeScript Style Guide
   </Tilt>
