--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -1,13 +1,14 @@
 ---
-# title: TypeScript TTTT Style Guide
+title: TypeScript Style Guide
 description: TypeScript Style Guide provides a concise set of conventions (sometimes arbitrary) and best practices used to create consistent, maintainable code.
 toc_min_heading_level: 2
 toc_max_heading_level: 3
 ---
 
 import TOCInline from "@theme/TOCInline";
-import { MainTitle } from "@site/src/components";
+import { MainTitle, DocumentTitle } from "@site/src/components";
 
+<DocumentTitle />
 <MainTitle>TypeScript Style Guide</MainTitle>
 
 ## Introduction
