--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -8,7 +8,7 @@ toc_max_heading_level: 3
 import TOCInline from "@theme/TOCInline";
 import { MainTitle, DocumentTitle } from "@site/src/components";
 
-<DocumentTitle />
+<DocumentTitle title="TypeScript Style Guide" />
 <MainTitle>TypeScript Style Guide</MainTitle>
 
 ## Introduction
