--- a/website/src/pages/index.mdx
+++ b/website/src/pages/index.mdx
@@ -322,7 +322,7 @@ overrides: [
 
 ### Naming Conventions
 
-While it's often hard to find the best names, try optimize code for consistency and future reader by following rules:
+While it's often hard to find the best name, try optimize code for consistency and future reader by following conventions:
 
 #### Variables
 
@@ -354,7 +354,7 @@ Camel case
 
 #### Generics
 
-A name starts with the capital letter T `TRequest`, `TFooBar` (similar as [Google style guide](https://google.github.io/styleguide/javaguide.html#s5.2.8-type-variable-names) or [.Net internal](https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.dictionary-2?view=net-5.0) implementation).  
+A name starts with the capital letter T `TRequest`, `TFooBar` (similar to [.Net internal](https://learn.microsoft.com/en-us/dotnet/api/system.collections.generic.dictionary-2?view=net-5.0) implementation or [Google style guide](https://google.github.io/styleguide/javaguide.html#s5.2.8-type-variable-names)).  
  Avoid (popular convention) naming generics with one character `T`, `K` etc., the more variables we introduce, the easier it is to mistake them.
 
 ```ts
